Retirando raizes do lovable pra carregar a imagem da tela do aproximei

--- a/aproximei-tcc-react/index.html
+++ b/aproximei-tcc-react/index.html
@@ -10,11 +10,10 @@
     <meta property="og:title" content="APROXIMEI - Encontre o serviço ideal" />
     <meta property="og:description" content="Conecte-se aos melhores prestadores de serviços da sua região" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="https://aproximei-tcc-frontend.vercel.app/images/og-image.png" />
+    <meta name="twitter:site" content="@Aproximei" />
+    <meta name="twitter:image" content="https://aproximei-tcc-frontend.vercel.app/images/og-image.png" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
